--- a/training/config.yaml
+++ b/training/config.yaml
@@ -20,6 +20,6 @@ training:
  epoch : 2
 
 inference:
- background_threshold = 0.5
- class_threshold = 0.5
- nms_threshold = 0.7
+ background_threshold : 0.5
+ class_threshold : 0.5
+ nms_threshold : 0.7
