--- a/training/cfg/config.yaml
+++ b/training/cfg/config.yaml
@@ -13,6 +13,7 @@ assign_cfg:
  threshold: 0.5
 
 anchors:
+ fpnlevels : [3,4,5]
  ratios : [2,4]
  scales : [0.75,1]
 
@@ -20,6 +21,6 @@ training:
  epoch : 70
 
 inference:
- background_threshold : 0.3
- class_threshold : 0.3
+ background_threshold : 0.5
+ class_threshold : 0.5
  nms_threshold : 0.7
